[Help] Improve responsiveness by hiding the menu below tablets + fix height on mobile
[Help] Improve responsiveness by hiding the menu below tablets

--- a/src/design/sizes.scss
+++ b/src/design/sizes.scss
@@ -50,3 +50,6 @@ $quick-search-banner-height: 40px;
 $quick-search-result-height: 50px;
 $quick-search-result-width: 441px;
 $quick-search-horizontal-padding: 24px;
+
+// Help
+$help-toolbar-height: 50px;
